# cgProjectEngine

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  Dependencies.cmake  LICENSE.txt  Options.cmake  README.md  captureSettingsTestbed.cap
assets/: Background.frag  Background.vert  BuildTerrainHashGrid.comp  Density.comp  EquiToCube.frag  EquiToCube.vert  MarchingCubes.comp  ResetTerrainHashGrid.comp  TerrainCollision.comp  coin.mtl  destructible.mtl  down.mtl  lightTestScene.mtl  magnet.mtl  ornithepter.mtl  ornithopter skeleton.blend1  ornithopter_body.mtl  ornithopter_top_details.blend  piece.mtl  prop.mtl  speed.mtl
cmake/: Cache.cmake  CompilerWarnings.cmake  Hardening.cmake  InterproceduralOptimization.cmake  LibFuzzer.cmake  PackageProject.cmake  PreventInSourceBuilds.cmake  Sanitizers.cmake  StaticAnalyzers.cmake  Tests.cmake  Utilities.cmake
docs/: .$DB_homework_1.drawio.bkp  .$DB_homework_1_logical.drawio.bkp  .$DB_homework_1_logical.drawio.dtmp  .$highLevelView.drawio.bkp  .$highLevelView.drawio.dtmp  DB_homework_1.drawio  DB_homework_1_logical.drawio  highLevelView.drawio
docs/notes/: CodingConventions.md  Gameplay.md  Renderer.md
docs/notes/Core/: event.md  mathTime.md  memory.md  modules.md  string.md
fuzz_test/: CMakeLists.txt  fuzz_tester.cpp
src/: CMakeLists.txt  main.cpp
src/Core/: CMakeLists.txt
src/Core/include/Core/: Alloc.h  Containers.h  Event.h  Events.h  KeyboardKeys.h  MacroDefs.h  Module.h  Random.h  StringUtils.h  TimeUtils.h  Type.h  Utility.h
src/Core/src/: Alloc.cpp  Event.cpp  Module.cpp  Random.cpp  StringUtils.cpp  Utility.cpp
src/Entity/: CMakeLists.txt
src/Entity/include/Entity/: CollisionWorld.h  EntityManager.h  WorldView.h
src/Entity/src/: CollisionWorld.cpp
src/Launch/: CMakeLists.txt
src/Launch/include/Launch/: Entry.h
src/Launch/src/: Entry.cpp
src/Render/: CMakeLists.txt
src/Render/include/Render/: Renderer.h  Renderer2d.h  VoxelTerrain.h  Window.h
src/Render/include/Render/dev/: guida.txt
src/Render/include/Render/dev/info grafica progetto/: build_command.txt  drawindirect.txt  notes.txt
src/Render/include/Render/dev/info grafica progetto/cgProjectEngine/: .clang-format  .gitignore  CMakeLists.txt  Dependencies.cmake  Options.cmake
src/Render/src/: Renderer.cpp  Renderer2d.cpp  VoxelTerrain.cpp  Window.cpp
src/RenderUtils/: CMakeLists.txt
src/RenderUtils/include/RenderUtils/: GLutils.h
src/Resource/: CMakeLists.txt
src/Resource/include/Resource/: HandleTable.h  Ref.h  WeakRef.h
src/Resource/include/Resource/Rendering/: Buffer.h  GpuProgram.h  Mesh.h  ShaderLibrary.h  cgeLight.h  cgeMaterial.h  cgeMesh.cpp  cgeMesh.h  cgeScene.h  cgeTexture.h
src/Resource/src/: HandleTable.cpp
src/Resource/src/Rendering/: Buffer.cpp  GpuProgram.cpp  Mesh.cpp  ShaderLibrary.cpp  Texture.cpp  cgeMesh.cpp  cgeScene.cpp  cgeTexture.cpp
testbed/: BackgroundRenderer.cpp  BackgroundRenderer.h  CMakeLists.txt  ConstantsAndStructs.h  MainMenu.cpp  MainMenu.h  MenuModule.cpp  MenuModule.h  Ornithopter.cpp  Ornithopter.h  Player.cpp  Player.h  SoundEngine.cpp  SoundEngine.h  Testbed.cpp  Testbed.h  Utils.h  WorldSpawner.cpp  WorldSpawner.h
